# tokki

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-draft.yml  windows-release-artifact.yml
agents/: updates.md
docs/: README.md  release-readiness-checklist.md  windows-install-update.md
docs/analysis/: README.md
docs/plans/: 2026-03-06-avatar-expansion-design.md  2026-03-06-avatar-expansion-plan.md
scripts/github/: Set-MainBranchProtection.ps1
scripts/release/: New-TokkiMacosReleaseArtifact.ps1  New-TokkiReleaseManifest.ps1  Test-TokkiMacosReleaseArtifact.ps1
scripts/windows/: Install-Tokki.ps1  New-TokkiReleaseArtifact.ps1  Test-TokkiReleaseArtifact.ps1  Test-TokkiUpdateReliability.ps1  Tokki.Common.psm1  Tokki.Release.json  Tokki.ps1  Update-Tokki.ps1
src/: App.test.tsx  App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  discovery.rs  events.rs  lib.rs  main.rs  presence.rs  runtime.rs  settings.rs
src-tauri/src/engine/: behavior.rs  mod.rs  models.rs
src-tauri/src/llm/: client.rs  config.rs  grounding.rs  memory.rs  mod.rs  models.rs  offline.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/persistence/: crypto.rs  db.rs  keystore.rs  mod.rs  portable.rs
src/animation/: composeAvatarClasses.test.ts  composeAvatarClasses.ts  mapActionToView.test.ts  (+3 more)
(+99 files in other folders)
